Move sketchbook button and rename label

--- a/public/index.html
+++ b/public/index.html
@@ -340,7 +340,7 @@
                 <div id="library-book-list" class="flex items-center gap-2 overflow-x-auto"></div>
             </div>
             <div id="sketchbook-tab-content" class="tab-content">
-                <div class="flex items-end justify-end h-[80vh]">
+                <div class="flex items-start justify-end h-[80vh] p-4">
                     <button id="open-sketchbook-btn" class="btn btn-primary">에이두 스케치북 이동</button>
                 </div>
             </div>
