--- a/public/Sketch.html
+++ b/public/Sketch.html
@@ -105,7 +105,7 @@
                             {/* 로고 */}
                             <div className="flex items-center space-x-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className="text-blue-500"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>
-                                <span className="font-bold text-lg text-gray-800">에이두 스케치</span>
+                                <span className="font-bold text-lg text-gray-800">에이두 스케치북</span>
                             </div>
 
                             {/* 버튼들 */}
