chore: clarify IEP naming and comments

--- a/public/special.html
+++ b/public/special.html
@@ -89,7 +89,8 @@
                         <span id="user-email" class="text-sm text-gray-600"></span>
                         <a href="#home" id="nav-home" class="nav-link">홈</a>
                         <a href="#my-class" id="nav-my-class" class="nav-link">내 학급 관리</a>
-                        <a href="#iep" id="nav-iep" class="nav-link">개별화교육계획</a>
+                        <!-- IEP navigation link; '개별화교육계획' is commonly referred to as 'IEP'. Modify this section when updating 'iep'. -->
+                        <a href="#iep" id="nav-iep" class="nav-link">개별화교육계획(IEP)</a>
                         <a href="#behavior" id="nav-behavior" class="nav-link">행동 중재</a>
                         <button id="logout-btn" class="text-sm bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-3 rounded-md transition-colors">로그아웃</button>
                     </nav>
@@ -156,7 +157,8 @@
                                     <label for="student-needs" class="block text-sm font-medium text-gray-700">학생 요구사항 및 강점</label>
                                     <textarea id="student-needs" rows="4" class="mt-1 block w-full border border-gray-300 rounded-md p-2" placeholder="학생의 특별한 교육적 요구, 강점, 흥미 등을 입력하세요."></textarea>
                                 </div>
-                                <button type="submit" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-3 px-4 rounded-lg">AI 개별화교육계획 초안 생성</button>
+                                <!-- IEP: generate draft for 개별화교육계획(IEP). Update here when modifying 'iep' features. -->
+                                <button type="submit" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-3 px-4 rounded-lg">AI 개별화교육계획(IEP) 초안 생성</button>
                             </form>
                         </aside>
                         <section class="w-full lg:w-2/3">
